--- a/packages/package.json
+++ b/packages/package.json
@@ -17,12 +17,16 @@
   },
   "homepage": "https://github.com/worona/cdn-packages#readme",
   "dependencies": {
-    "accounts-dashboard-extension-worona": "1.1.2",
-    "core-dashboard-worona": "1.1.9"
+    "accounts-dashboard-extension-worona": "1.1.6",
+    "bulma-dashboard-theme-worona": "1.1.4",
+    "connection-dashboard-extension-worona": "1.1.2",
+    "core-dashboard-worona": "1.1.11",
+    "sites-dashboard-extension-worona": "1.1.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-prompt": "^0.2.0",
+    "keycdn": "^0.2.0",
     "mongoose": "^4.4.20",
     "semver": "^5.1.0"
   }
