--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,8 @@
   "main": "src/server.js",
   "scripts": {
     "clean": "rimraf build",
-    "start": "webpack --config webpack.dev.js --watch",
-    "build": "npm run clean && webpack --config webpack.prod.js -p"
+    "start": "nodemon src/server.js --watch src/ --exec babel-node",
+    "build": "npm run clean && webpack -p"
   },
   "repository": {
     "type": "git",
@@ -27,12 +27,9 @@
   "homepage": "https://github.com/worona/worona-cdn#readme",
   "devDependencies": {
     "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "json-loader": "^0.5.4",
-    "rimraf": "^2.5.4",
-    "start-server-webpack-plugin": "^2.0.1",
-    "webpack": "^1.13.1"
+    "nodemon": "^1.10.2",
+    "rimraf": "^2.5.4"
   },
   "dependencies": {
     "express": "^4.13.4",
