--- a/packages/package.json
+++ b/packages/package.json
@@ -21,11 +21,13 @@
     "accounts-dashboard-extension-worona": "1.1.10",
     "bulma-dashboard-theme-worona": "1.1.12",
     "connection-dashboard-extension-worona": "1.1.4",
+    "core-app-worona": "1.1.0",
     "core-dashboard-worona": "1.1.23",
     "npm-check-updates": "^2.8.0",
     "settings-dashboard-extension-worona": "1.0.2",
     "sites-dashboard-extension-worona": "1.1.3",
-    "subscriptions-dashboard-extension-worona": "1.1.4"
+    "subscriptions-dashboard-extension-worona": "1.1.4",
+    "test-development-package-worona": "1.0.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
