--- a/packages/package.json
+++ b/packages/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "update-packages": "npm-check-updates -u"
+    "update-packages": "npm-check-updates -u",
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -19,21 +20,25 @@
   "homepage": "https://github.com/worona/cdn-packages#readme",
   "dependencies": {
     "accounts-dashboard-extension-worona": "1.1.10",
-    "bulma-dashboard-theme-worona": "1.1.12",
+    "bulma-dashboard-theme-worona": "1.2.0",
     "connection-dashboard-extension-worona": "1.1.4",
     "core-app-worona": "1.1.0",
-    "core-dashboard-worona": "1.1.23",
-    "npm-check-updates": "^2.8.0",
+    "core-dashboard-worona": "1.2.0",
     "settings-dashboard-extension-worona": "1.0.2",
     "sites-dashboard-extension-worona": "1.1.3",
     "subscriptions-dashboard-extension-worona": "1.1.4",
     "test-development-package-worona": "1.0.1"
   },
   "devDependencies": {
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-prompt": "^0.2.0",
     "keycdn": "^0.2.0",
+    "lodash-webpack-plugin": "^0.10.1",
     "mongoose": "^4.4.20",
-    "semver": "^5.1.0"
+    "npm-check-updates": "^2.8.2",
+    "semver": "^5.1.0",
+    "webpack": "^1.13.2",
+    "webpack-stats-plugin": "^0.1.3"
   }
 }
