--- a/packages/package.json
+++ b/packages/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "update-packages": "npm-check-updates -u",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js --progress"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,7 @@
     "bulma-dashboard-theme-worona": "1.2.0",
     "connection-dashboard-extension-worona": "1.1.4",
     "core-app-worona": "1.1.0",
-    "core-dashboard-worona": "1.2.0",
+    "core-dashboard-worona": "1.2.3",
     "settings-dashboard-extension-worona": "1.0.2",
     "sites-dashboard-extension-worona": "1.1.3",
     "subscriptions-dashboard-extension-worona": "1.1.4",
@@ -31,12 +31,14 @@
   },
   "devDependencies": {
     "extract-text-webpack-plugin": "^1.0.1",
+    "fix-moduleid-and-chunkid-plugin": "^0.1.1",
     "gulp": "^3.9.1",
     "gulp-prompt": "^0.2.0",
     "keycdn": "^0.2.0",
     "lodash-webpack-plugin": "^0.10.1",
     "mongoose": "^4.4.20",
     "npm-check-updates": "^2.8.2",
+    "rimraf": "^2.5.4",
     "semver": "^5.1.0",
     "webpack": "^1.13.2",
     "webpack-stats-plugin": "^0.1.3"
