--- a/packages/package.json
+++ b/packages/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "update-packages": "npm-check-updates -u",
-    "build": "webpack --config webpack.config.js --progress"
+    "webpack": "webpack --config webpack.config.js --progress",
+    "build": "node build/inquire.js && node build/install.js && node build/vendors.js && webpack --config webpack.config.js --progress"
   },
   "repository": {
     "type": "git",
@@ -23,23 +24,47 @@
     "bulma-dashboard-theme-worona": "1.2.0",
     "connection-dashboard-extension-worona": "1.1.4",
     "core-app-worona": "1.1.0",
-    "core-dashboard-worona": "1.2.3",
+    "core-dashboard-worona": "1.2.4",
     "settings-dashboard-extension-worona": "1.0.2",
     "sites-dashboard-extension-worona": "1.1.3",
     "subscriptions-dashboard-extension-worona": "1.1.4",
     "test-development-package-worona": "1.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-lodash": "^3.2.9",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "bundle-loader": "^0.5.4",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
     "fix-moduleid-and-chunkid-plugin": "^0.1.1",
     "gulp": "^3.9.1",
     "gulp-prompt": "^0.2.0",
+    "html-webpack-plugin": "^2.22.0",
+    "ignore-loader": "^0.1.1",
+    "inquirer": "^1.2.1",
+    "json-loader": "^0.5.4",
     "keycdn": "^0.2.0",
+    "lodash": "^4.16.4",
     "lodash-webpack-plugin": "^0.10.1",
     "mongoose": "^4.4.20",
+    "node-sass": "^3.10.1",
     "npm-check-updates": "^2.8.2",
+    "postcss": "^5.2.4",
+    "postcss-cssnext": "^2.8.0",
+    "postcss-loader": "^0.13.0",
     "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.2",
+    "script-loader": "^0.7.0",
     "semver": "^5.1.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-stats-plugin": "^0.1.3"
   }
