--- a/packages/package.json
+++ b/packages/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "update-packages": "npm-check-updates -u",
     "webpack": "webpack --config webpack.config.js --progress",
-    "build": "node build/inquire.js && node build/install.js && node build/vendors.js && webpack --config webpack.config.js --progress"
+    "build": "node build/inquire.js && node build/install.js && node build/vendors.js && webpack --config webpack.config.js --progress && node build/save.js && node build/purge.js && node build/finish.js"
   },
   "repository": {
     "type": "git",
