--- a/packages/package.json
+++ b/packages/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "update-packages": "npm-check-updates -u",
     "webpack": "webpack --config webpack.config.js --progress",
+    "start": "babel-node build/index.js",
     "build": "node build/inquire.js && node build/install.js && node build/vendors.js && webpack --config webpack.config.js --progress && node build/save.js && node build/purge.js && node build/finish.js"
   },
   "repository": {
@@ -39,6 +40,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "bundle-loader": "^0.5.4",
+    "child-process-promise": "^2.1.3",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
