--- a/packages/package.json
+++ b/packages/package.json
@@ -46,6 +46,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "fix-moduleid-and-chunkid-plugin": "^0.1.1",
+    "fs-promise": "^0.5.0",
     "gulp": "^3.9.1",
     "gulp-prompt": "^0.2.0",
     "html-webpack-plugin": "^2.22.0",
