--- a/packages/package.json
+++ b/packages/package.json
@@ -41,6 +41,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "bundle-loader": "^0.5.4",
     "child-process-promise": "^2.1.3",
+    "colors": "^1.1.2",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
