--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.16.0",
     "nodemon": "^1.10.2",
     "rimraf": "^2.5.4"
   },
