--- a/packages/package.json
+++ b/packages/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "update": "babel-node build/update.js",
-    "update:all": "babel-node build/update.js --all"
+    "update:one": "babel-node build/update.js --one"
   },
   "repository": {
     "type": "git",
@@ -18,15 +18,15 @@
   },
   "homepage": "https://github.com/worona/cdn-packages#readme",
   "dependencies": {
-    "accounts-dashboard-extension-worona": "1.2.0",
+    "accounts-dashboard-extension-worona": "1.2.1",
     "bulma-dashboard-theme-worona": "1.2.0",
-    "connection-dashboard-extension-worona": "1.1.4",
+    "connection-dashboard-extension-worona": "1.2.0",
     "core-app-worona": "1.1.0",
-    "core-dashboard-worona": "1.2.6",
-    "settings-dashboard-extension-worona": "1.0.2",
-    "sites-dashboard-extension-worona": "1.1.3",
-    "subscriptions-dashboard-extension-worona": "1.1.4",
-    "test-development-package-worona": "1.0.1"
+    "core-dashboard-worona": "1.2.7",
+    "settings-dashboard-extension-worona": "1.2.0",
+    "sites-dashboard-extension-worona": "1.2.0",
+    "subscriptions-dashboard-extension-worona": "1.2.0",
+    "test-development-package-worona": "1.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
@@ -55,7 +55,6 @@
     "lodash-webpack-plugin": "^0.10.1",
     "mongoose": "^4.4.20",
     "node-sass": "^3.10.1",
-    "npm-registry": "^0.1.13",
     "postcss": "^5.2.4",
     "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^0.13.0",
@@ -64,6 +63,7 @@
     "script-loader": "^0.7.0",
     "semver": "^5.1.0",
     "style-loader": "^0.13.1",
+    "superagent": "^2.3.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-stats-plugin": "^0.1.3"
