--- a/packages/package.json
+++ b/packages/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cdn-packages-worona",
+  "private": true,
   "version": "1.0.0",
   "description": "Install worona packages and update the database",
   "main": "index.js",
@@ -18,17 +19,7 @@
     "url": "https://github.com/worona/cdn-packages/issues"
   },
   "homepage": "https://github.com/worona/cdn-packages#readme",
-  "dependencies": {
-    "accounts-dashboard-extension-worona": "1.2.1",
-    "bulma-dashboard-theme-worona": "1.2.0",
-    "connection-dashboard-extension-worona": "1.2.0",
-    "core-app-worona": "1.1.0",
-    "core-dashboard-worona": "1.2.7",
-    "settings-dashboard-extension-worona": "1.2.0",
-    "sites-dashboard-extension-worona": "1.2.0",
-    "subscriptions-dashboard-extension-worona": "1.2.0",
-    "test-development-package-worona": "1.2.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
