--- a/api/package.json
+++ b/api/package.json
@@ -29,10 +29,13 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.16.0",
+    "json-loader": "^0.5.4",
     "nodemon": "^1.10.2",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "webpack": "^1.13.3"
   },
   "dependencies": {
     "express": "^4.13.4",
