--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "webpack": "^1.13.3"
   },
   "dependencies": {
+    "babel-polyfill": "^6.16.0",
     "express": "^4.13.4",
     "express-mongo-db": "^2.0.3",
     "mongodb": "^2.1.21"
