--- a/api/package.json
+++ b/api/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
+    "cors": "^2.8.1",
     "express": "^4.13.4",
     "express-mongo-db": "^2.0.3",
     "mongodb": "^2.1.21",
