--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "no-console": 0,
     "global-require": 0,
     "import/no-dynamic-require": 0,
-    "no-underscore-dangle": ["error", { "allow": [ "_id" ] }]
+    "no-underscore-dangle": ["error", { "allow": [ "_id" ] }],
+    "array-bracket-spacing": 0
   }
 }
