--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "import/no-dynamic-require": 0,
     "no-underscore-dangle": ["error", { "allow": [ "_id" ] }],
     "array-bracket-spacing": 0,
-    "curly": ["error", "multi-or-nest"],
-    "semi": 0
+    "curly": 0,
+    "semi": 0,
+    "arrow-parens": ["error", "as-needed", { "requireForBlockBody": false }]
   }
 }
