--- a/api/package.json
+++ b/api/package.json
@@ -44,7 +44,9 @@
     "express": "^4.13.4",
     "express-mongo-db": "^2.0.3",
     "keycdn": "^0.2.0",
+    "mixpanel": "^0.6.0",
     "mongodb": "^2.1.21",
+    "nodemon": "^1.11.0",
     "react-s3-uploader": "^3.3.0",
     "shorthash": "0.0.2"
   }
