--- a/packages/package.json
+++ b/packages/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "update": "babel-node build/update.js",
     "update:one": "babel-node build/update.js --add",
-    "update:force": "babel-node build/update.js --force"
+    "update:force": "babel-node build/update.js --force",
+    "update:cordova-index": "babel-node build/update-cordova-index.js"
   },
   "repository": {
     "type": "git",
@@ -45,6 +46,7 @@
     "keycdn": "^0.2.0",
     "lodash": "^4.16.4",
     "lodash-webpack-plugin": "^0.10.1",
+    "mkdirp": "^0.5.1",
     "mongoose": "^4.7.4",
     "node-sass": "^3.10.1",
     "postcss": "^5.2.4",
@@ -58,6 +60,7 @@
     "superagent": "^2.3.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
-    "webpack-stats-plugin": "^0.1.3"
+    "webpack-stats-plugin": "^0.1.3",
+    "worona-cordova-index": "^1.0.0"
   }
 }
