Rename api in pm2

--- a/api/process.json.example
+++ b/api/process.json.example
@@ -1,6 +1,6 @@
 {
   apps : [{
-    name        : "server",
+    name        : "api",
     script      : "./dist/server.js",
     watch       : true,
     env_dev: {
