--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rimraf dist/server.js",
     "start": "nodemon src/server.js --watch src/ --exec babel-node",
-    "start:debug": "nodemon src/server.js --watch src/ --exec \"babel-node --inspect --debug-brk\"",
+    "debug": "nodemon src/server.js --watch src/ --exec \"babel-node --inspect --debug-brk\"",
     "build": "npm install && npm run clean && webpack -p && npm run purge",
     "purge": "babel-node build/purge.js"
   },
