--- a/packages/package.json
+++ b/packages/package.json
@@ -50,6 +50,7 @@
     "node-sass": "^3.10.1",
     "postcss": "^5.2.4",
     "postcss-cssnext": "^2.8.0",
+    "postcss-import": "^10.0.0",
     "postcss-loader": "^0.13.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
