--- a/packages/package.json
+++ b/packages/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "bundle-loader": "^0.5.4",
+    "caniuse-db": "^1.0.30000696",
     "child-process-promise": "^2.1.3",
     "colors": "^1.1.2",
     "copy-webpack-plugin": "^3.0.1",
